2008-09-16  Satoshi Nakagawa <psychs@limechat.net>

	Removed the sticky option for all kind of Growl notifications.

2008-09-12  Satoshi Nakagawa <psychs@limechat.net>

	Supported filenames surrounded by double quotations in DCC file transfers.

2008-08-11  Satoshi Nakagawa <psychs@limechat.net>

	Added context menu on channel name in logs.
	Based on a patch from Peter Haza.

2008-08-10  Satoshi Nakagawa <psychs@limechat.net>

	AutoOp dialog could cause a nil access exception.

2008-08-10  Satoshi Nakagawa <psychs@limechat.net>

	Separated InputTextField class from TextField class.

2008-08-05  Satoshi Nakagawa <psychs@limechat.net>

	Assigned cmd+shift+L for a hot key to activate LimeChat.
	Inspired by a patch from Keiji Yoshimi.

2008-08-04  Satoshi Nakagawa <psychs@limechat.net>

	Assigned opt+tab to move to the last selected channel.

2008-08-04  Keiji Yoshimi <walf443@gmail.com>

	It may be better to convert from NSImage to NSData transparently for
	following document and unifing interface of app_icon.

2008-07-28  Satoshi Nakagawa <psychs@limechat.net>

	Updated GrowlNotifier.

2008-07-24  Satoshi Nakagawa <psychs@limechat.net>

	Added a theme settings: input-text/selected/background-color
	The sample theme files should be copied to the theme directory on the first start up.
	Tweaked margin of the input text field.

2008-07-24  Satoshi Nakagawa <psychs@limechat.net>

	Refactoring table view cells around custom drawing.

2008-07-24  Satoshi Nakagawa <psychs@limechat.net>

	More margin for the input text field.

2008-07-23  Satoshi Nakagawa <psychs@limechat.net>

	Strip unnecessary ":" when printing a line to log file.

2008-07-23  Satoshi Nakagawa <psychs@limechat.net>

	Added .js file support for themes.

2008-07-23  Satoshi Nakagawa <psychs@limechat.net>

	Allow to send commands before login.

2008-07-19  Satoshi Nakagawa <psychs@limechat.net>

	Deal with parenthesis pairs in URLs.

2008-07-14  Satoshi Nakagawa <psychs@limechat.net>
