@@ -1,3 +1,7 @@
+2008-09-17  Satoshi Nakagawa <psychs@limechat.net>
+
+	Turn on the sticky option of Growl notifications again.
+
 2008-09-16  Satoshi Nakagawa <psychs@limechat.net>
 
 	Removed the sticky option for all kind of Growl notifications.
